--- a/src/App.css
+++ b/src/App.css
@@ -9,21 +9,36 @@
 }
 
 .btn {
-  background-color: rgba(0, 0, 0, 0.178);
+  background-color: rgba(0, 0, 0, 0.425);
   border: 1px solid rgba(255, 255, 255, 0.479);
   border-radius: 6px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.589);
-  color: cadetblue;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.42);
+  color: rgb(255, 255, 255);
   font-size: 20px;
   width: 80%;
 }
 
 .btn:hover {
-  background-color: azure;
+  background-color: rgba(240, 255, 255, 0.279);
   transform: translateY(-5px);
+  color: cadetblue;
 }
 
 .btn:active {
   transform: translateY(2px);
   transition: all 0.2s ease-in-out;
+}
+
+.option {
+  color: rgb(31, 131, 219);
+}
+
+.input-start {
+  outline: none;
+  border-radius: 7px;
+  width: 104%;
+  padding-left: 20px;
+  color: rgb(106, 203, 241);
+  background: transparent;
+  border: 1px solid white;
 }
