--- a/src/Components/converterMenu.css
+++ b/src/Components/converterMenu.css
@@ -29,3 +29,15 @@
   transform: translateY(-5px);
   border-radius: 17px;
 }
+
+.settingIcon:hover {
+  animation: rotation 0.6s ease-in-out;
+}
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(-180deg);
+  }
+}
