--- a/src/Components/converterMenu.css
+++ b/src/Components/converterMenu.css
@@ -7,17 +7,18 @@
 .btn-menu {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   min-height: 70vh;
+  row-gap: 20px;
 }
 
 .menu-item-btn {
   height: 50vh;
   max-width: 50vh;
-  min-width: 30vh;
-  font-size: 40px;
-  padding: 40px;
+  min-width: 20vh;
+  font-size: 25px;
+  padding: 20px;
   background-color: floralwhite;
 }
 
